[gd_scene load_steps=5 format=2]

[ext_resource path="res://events/event5/altars-3.png.png" type="Texture" id=1]
[ext_resource path="res://events/event5/avidEvent.gd" type="Script" id=2]
[ext_resource path="res://skelbunny/SkelBunny.tscn" type="PackedScene" id=3]
[ext_resource path="res://music/event.ogg" type="AudioStream" id=4]

[node name="avidEvent" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="altars-3png" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 64, 37.5 )
texture = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 0.670588 )

[node name="Label" type="Label" parent="."]
margin_left = 132.0
margin_top = 37.0
margin_right = 386.0
margin_bottom = 173.0
rect_scale = Vector2( 3, 3 )
align = 1
valign = 1
autowrap = true

[node name="Button3" type="Button" parent="."]
margin_left = 347.0
margin_top = 473.0
margin_right = 685.0
margin_bottom = 580.0
text = "CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 347.346
margin_top = 472.584
margin_right = 685.346
margin_bottom = 513.584
text = "MAKE AN OFFER! (Lose 30 coins and gain 1 max hp)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 450.97
margin_top = 542.936
margin_right = 582.969
margin_bottom = 579.936
text = "ignore the altar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SkelBunny" parent="." instance=ExtResource( 3 )]
position = Vector2( -137.302, 240.806 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -7.0
autoplay = true
[connection signal="pressed" from="Button3" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
